# wgpu-tetris

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  notes.txt  tetris.sublime-project
.cargo/: config.toml
src/: game.rs  gui.rs  input.rs  lib.rs  main.rs  renderer.rs  shader.wgsl
src/renderer/: font_renderer.rs  mod.rs
src/renderer/shaders/: bordered_block.wgsl  text.wgsl
wgpu-dynamic/: Cargo.toml
wgpu-dynamic/src/: lib.rs
